--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -37,7 +37,7 @@ h1 {
   font-size: 20px;
   float: right;
 }
-.customer-name {
+.customer-form {
   width: 60%;
 }
 .allburgers {
@@ -46,7 +46,6 @@ h1 {
   margin-top: 40px;
 }
 li {
-  margin-bottom: 10px;
   list-style-type: none;
 }
 i {
@@ -56,7 +55,7 @@ hr {
   background-color: rgba(255, 255, 255, 0.274);
 }
 .eatenburgers {
-  color: rgb(255, 206, 187);
+  color: rgb(102, 148, 114);
   margin-top: 100px;
   overflow: scroll;
   height: 400px;
@@ -67,5 +66,5 @@ hr {
   background-size: cover;
 }
 .fa-utensils {
-  color: rgb(255, 206, 187);
+  color: rgb(138, 204, 156);
 }
