--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -9,6 +9,7 @@
   background-size: cover;
   width: 100%;
   height: 100%;
+  min-width: 300px;
 }
 body {
   background-color: black;
@@ -42,7 +43,7 @@ h1 {
 }
 .allburgers {
   height: 400px;
-  overflow: scroll;
+  overflow-y: scroll;
   margin-top: 40px;
 }
 li {
@@ -57,14 +58,23 @@ hr {
 .eatenburgers {
   color: rgb(102, 148, 114);
   margin-top: 100px;
-  overflow: scroll;
+  overflow-y: scroll;
   height: 400px;
 }
 .bg2 {
+  overflow: hidden;
   background-image: url("../img/chef.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
 .fa-utensils {
   color: rgb(138, 204, 156);
+}
+.all-list {
+  overflow: hidden;
+}
+@media (max-width: 576px) {
+  .bg {
+    min-height: 1500px;
+  }
 }
