--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-5">
+        <div class="col-lg-5 col-md-12 all-list">
             <h1>Eat Da Burger!</h1>
             <div class="input-group mb-3">
                 <input type="text" class="form-control burger-name" placeholder="Enter a burger you want to eat">
@@ -26,8 +26,8 @@
                 {{/each}}
             </ul>
         </div>
-        <div class="col-sm-3 bg"></div>
-        <div class="col-sm-4 bg2">
+        <div class="col-lg-3 col-md-12 bg"></div>
+        <div class="col-lg-4 col-md-12 bg2">
             <ul class="eatenburgers">
                 {{#each burgers}}
                 {{#if devoured}}
